[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/bg.png" type="Texture" id=1]
[ext_resource path="res://sprites/sniper.png" type="Texture" id=2]
[ext_resource path="res://interface/MenuBTN.gd" type="Script" id=3]

[node name="Control" type="Control"]
margin_right = 110.0
margin_bottom = 102.0
rect_min_size = Vector2( 110, 102 )
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 54, 51 )
scale = Vector2( 0.665783, 0.697332 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3
region_enabled = true
region_rect = Rect2( 371, -16.155, 248.493, 313.527 )

[node name="ColorRect" type="ColorRect" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -42.0
margin_right = 41.0
margin_bottom = 42.0
grow_vertical = 0
mouse_filter = 2
color = Color( 0, 0, 0, 0.431373 )

[node name="ColorRect2" type="ColorRect" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -42.0
margin_right = 41.0
margin_bottom = 42.0
grow_vertical = 0
mouse_filter = 2
color = Color( 0, 0, 0, 0.262745 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
